add .gitignore fix maxpage result for paginator fix border size on mouse over

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,16 @@
 /app/config/parameters.yml
 /build/
 /phpunit.xml
-/var/*
-!/var/cache
-/var/cache/*
-!var/cache/.gitkeep
-!/var/logs
-/var/logs/*
-!var/logs/.gitkeep
-!/var/sessions
-/var/sessions/*
-!var/sessions/.gitkeep
-!var/SymfonyRequirements.php
+/app/*
+/app/cache/*
+!app/cache/.gitkeep
+/app/logs/*
+!app/logs/.gitkeep
+/app/sessions/*
+!app/sessions/.gitkeep
+!app/SymfonyRequirements.php
 /vendor/
 /web/bundles/
 .idea
 /node_modules/
-/web/upload
+/web/upload/
